// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package bandwidth;

import "piecestore.proto";

service Bandwidth {
  rpc BandwidthAgreements(piecestoreroutes.RenterBandwidthAllocation) returns (AgreementsSummary) {}
}

//TODO:  change the above to this at some point when we're not avoiding breaking gRPC
// service Bandwidth {
//   rpc BandwidthAgreements(BandWidthRequest) returns (AgreementsSummary) {}
// }

// message BandWidthRequest
//   piecestoreroutes.RenterBandwidthAllocation Order = 1 [(gogoproto.customtype) = "Order", (gogoproto.nullable) = false];
// }

message AgreementsSummary {
  enum Status {
    FAIL = 0;
    OK = 1;
    REJECTED = 2;
  }

  Status status = 1;
}